Login scene (basic), login back-end, jwt token protection for api
